--- a/homepage.html
+++ b/homepage.html
@@ -2,10 +2,9 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
     <title>Home Page</title>
 </head>
 <body>
-
+    <script src="homepage.js"></script>
 </body>
 </html>
